# clodo-hotel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  RELEASE.md  package.json
.github/workflows/: release.yml
memory/: MEMORY.md
scripts/: 0-import-tileset.ts  jsonl-viewer.html
standalone/: package-lock.json  package.json  server.ts  tsconfig.json
standalone/src/: agentServer.ts  assetLoader.ts  constants.ts  fileWatcher.ts  layoutPersistence.ts  sessionScanner.ts  timerManager.ts  transcriptParser.ts  types.ts
tauri-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: agent_server.rs  asset_loader.rs  constants.rs  file_watcher.rs  layout_persistence.rs  main.rs  pty_manager.rs  session_scanner.rs  timer_manager.rs  transcript_parser.rs  types.rs
webview-ui/: index.html  package-lock.json  package.json
webview-ui/public/assets/: default-layout.json
webview-ui/src/: App.tsx  appBridge.ts  constants.ts  dockIcon.ts  main.tsx  vscodeApi.ts
webview-ui/src/components/: AgentLabels.tsx  BottomToolbar.tsx  DebugView.tsx  SessionPickerModal.tsx  SettingsModal.tsx  TerminalPanel.tsx  TranscriptView.tsx  ZoomControls.tsx
webview-ui/src/hooks/: useAppMessages.ts  useEditorActions.ts  useExtensionMessages.ts
webview-ui/src/office/: floorTiles.ts  types.ts  wallTiles.ts
webview-ui/src/office/components/: OfficeCanvas.tsx  ToolOverlay.tsx
(+4 files in other folders)
