[package]
name = "clodo-hotel"
version = "1.0.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
png = "0.17"
dirs = "5"
base64 = "0.22"
cocoa = "0.26"
objc = "0.2"
